# bigdaddyintentcanvasrepo

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  beads-ralph-once.sh  gitleaks.toml
intentuimvp/backend/: .env.example  intentui.db  pyproject.toml  requirements.txt
intentuimvp/backend/app/: __init__.py  config.py  database.py  main.py  redis.py
intentuimvp/backend/app/agents/: __init__.py  base.py  echo_agent.py  intent_decipherer.py  intent_index.py  judge_agent.py  orchestrator.py  perspective_agent.py  research_agent.py  safety.py  synthesis_agent.py  tools.py
intentuimvp/backend/app/agui/: __init__.py  schemas.py
intentuimvp/backend/app/api/: assumption_store.py  backup.py  context.py  edges.py  health.py  jobs.py  mcp.py  nodes.py  preferences.py  workspace.py
intentuimvp/backend/app/context/: models.py  router.py
intentuimvp/backend/app/gateway/: client.py
intentuimvp/backend/app/jobs/: __init__.py  artifact_storage.py  base.py  client.py  progress.py  retry.py  worker.py
intentuimvp/backend/app/mcp/: __init__.py  calendar.py  client.py  manager.py  models.py  registry.py  security.py
intentuimvp/backend/app/models/: __init__.py  artifact.py  attachment.py  (+7 more)
intentuimvp/backend/intentuimvp_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
intentuimvp/backend/migrations/: env.py
intentuimvp/backend/scripts/: check_gateway_imports.py
intentuimvp/backend/tests/: conftest.py  test_agui_schemas.py  test_canvas_node_edge.py  test_config.py  test_gateway_only_enforcement.py  test_state_sync.py
(+113 files in other folders)
